src/Components/CustomHook/CustomHook.css
html,
body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, ‘Segoe UI’, Roboto, Oxygen, Ubuntu, Cantarell,
    ‘Open Sans’, ‘Helvetica Neue’, sans-serif;
}
body.light-mode {
  background-color: #f2dda4;
  color: #333;
  transition: background-color 0.3s ease;
}
body.dark-mode {
  background-color: #051220;
  color: #dfdfdf;
}
body.navbar {
  background-color: #1b2938;
}
body.dark-mode-toggle > button {
  color: #999;
}
.navbar {
  top: 0;
  width: 100%;
  display: flex;
  background-color: #9cccc5;
}
.content {
  padding: 20px;
  margin: 0 auto;
  margin-top: 60px;
  max-width: 600px;
  font-size: 20px;
  line-height: 1.3em;
}
h1 {
  font-size: 2rem;
}
img {
  width: 100%;
}
code {
  background-color: #cbe9ff;
  border-radius: 2px;
  font-size: 1em;
  padding: 0 5px;
}
a {
  text-decoration: none;
  color: #006688;
}
.button1 {
  color: #006688;
  background-color: transparent;
  border: none;
  font-size: 1em;
  padding: 0;
}
body.dark-mode .content code {
  background-color: #1b2938;
}
body.dark-mode .content a {
  color: #ee09;
}
body.dark-mode .content button {
  color: #ee09;
}
div.dark-mode-toggle {
  align-content: center;
  display: flex;
  margin: 0 auto;
}
.button1 {
  font-size: 1.2em;
  background: none;
  border: none;
  color: #ffe600;
  cursor: pointer;
  transition: color 0.3s ease;
}
.button1:last-child {
  color: black;
}
.button1:focus {
  outline: none;
}
.toggle-control {
  position: relative;
  padding: 0 4px;
  display: flex;
  align-items: center;
}
input[type='‘checkbox’'].dmcheck {
  width: 40px;
  height: 10px;
  background: #555;
  position: relative;
  border-radius: 5px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
  vertical-align: 2px;
  outline: none;
}
input:checked + label {
  left: 30px;
}
input:focus-visible {
  outline: solid 2px white;
}
.label1 {
  display: inline-block;
  width: 18px;
  height: 18px;
  border-radius: 20%;
  transition: all 0.3s ease;
  cursor: pointer;
  position: absolute;
  left: 2px;
  background: #fff;
  opacity: 0.9;
  background-color: #f6f6f6;
}
.input1 {
  display: inline-block;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  transition: all 0.3s ease;
  cursor: pointer;
  position: absolute;
  left: 2px;
  background: #fff;
  opacity: 0.9;
  background-color: #f6f6f6;
}

